# snake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_en.md
.github/workflows/: build.yml  release.yml
doc/: project_prompt.md  project_prompt_en.md
include/: snake.h
src/: main.c  snake.c
test/: snake_test.c
